整合RedisChatMemory